--- a/html/transferencia.html
+++ b/html/transferencia.html
@@ -18,7 +18,7 @@
         <button type="submit">Realizar Transferencia</button>
     </form>
     <br>
-    <button type="button" onclick="location.href='/login.html'">Salir - Cambiar Usuario</button>
+    <button type="button" onclick="location.href='/index.html'">Salir - Cambiar Usuario</button>
 
     <script src="/js/clases.js"></script>
     <script src="/js/datosCuenta.js"></script>
