--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+    <script>
+        window.addEventListener('load', function() {
+            alert('Ingresa con el user: usuario1 pass: password1 ');
+            alert('Sino');
+            alert('Ingresa con el user: usuario2 pass: password2');
+        });
+    </script>
     <h1>APLICACION WEB - PRACTICA PROGRAMACION</h1>
     <h2>CAPORASO MANUEL ALEJANDRO</h2>
     
