--- a/html/transferencia.html
+++ b/html/transferencia.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="/css/style2.css">
 </head>
 <body>
+    <script>
+        window.addEventListener('load', function() {
+            alert('Cuentas disponibles: 1,2,3,4,5,6 ,tanto de origen o de destino');
+        });
+    </script>
     <h1>Transferencia de Dinero</h1>
     <form id="transferForm" onsubmit="javascript:realizar_transferencia()"> 
         <label for="originAccount">Cuenta Origen:</label>
